Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19365

Assertion failure in LONG Unique after 10.3 merge

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL)
    • 10.4.9, 10.5.0
    • Server
    • None

    Description

      It fails because while calling ha_index_init it , inited is RND instead of NONE

      CURRENT_TEST: main.long_unique_bugs
      mysqltest: At line 74: query 'replace into t values ('foo')' failed: 2013: Lost connection to MySQL server during query
      

      #6  0x00007f04a58c50f2 in __GI___assert_fail (assertion=0x55d2a8932146 "inited==NONE", file=0x55d2a893212a "/mariadb/10.4/sql/handler.h", line=3172, function=0x55d2a8932153 "int handler::ha_index_init(uint, bool)") at assert.c:101
      #7  0x000055d2a7ef5ac6 in handler::ha_index_init (this=0x7f042c128010, idx=0, sorted=<optimized out>) at /mariadb/10.4/sql/handler.h:3172
      #8  0x000055d2a81dfedb in check_duplicate_long_entry_key (table=0x7f042c127218, h=0x7f042c128010, new_rec=0x7f042c110c68 "\374\003", key_no=0) at /mariadb/10.4/sql/handler.cc:6407
      #9  0x000055d2a81dccbf in check_duplicate_long_entries (table=0x7f042c127218, h=0x7f042c128010, new_rec=<optimized out>) at /mariadb/10.4/sql/handler.cc:6482
      #10 handler::ha_write_row (this=0x7f042c128010, buf=0x7f042c110c68 "\374\003") at /mariadb/10.4/sql/handler.cc:6561
      #11 0x000055d2a7f3dea2 in write_record (thd=0x7f042c000cf8, table=0x7f042c127218, info=0x7f049a638db0) at /mariadb/10.4/sql/sql_insert.cc:1711
      #12 0x000055d2a7f3b7a7 in mysql_insert (thd=<optimized out>, table_list=<optimized out>, fields=..., values_list=..., update_fields=..., update_values=..., duplic=<optimized out>, ignore=<optimized out>) at /mariadb/10.4/sql/sql_insert.cc:1075
      #13 0x000055d2a7f79744 in mysql_execute_command (thd=0x7f042c000cf8) at /mariadb/10.4/sql/sql_parse.cc:4786
      #14 0x000055d2a7f6fc6a in mysql_parse (thd=0x7f042c000cf8, rawbuf=0x7f042c014850 "replace into t values ('foo')", length=<optimized out>, parser_state=0x7f049a63a280, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /mariadb/10.4/sql/sql_parse.cc:8150
      

      Attachments

        Activity

          People

            sachin.setiya.007 Sachin Setiya (Inactive)
            sachin.setiya.007 Sachin Setiya (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d 7h
                1d 7h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.