MDEV-19365 Assertion failure in LONG Unique after 10.3 merge

If handler->inited is RND use cloned handler for long unique duplicate search.